# kage

./: CODEX_CI_CONVERGENCE.md  CODEX_CONVERGENCE.md  Cargo.toml  LICENSE  README.md
.github/docker/kage-strict/: Dockerfile
.github/workflows/: ci.yml
crates/kage-cli/: Cargo.toml
crates/kage-cli/src/: main.rs
crates/kage-cli/tests/: cli.rs
crates/kage-container/: Cargo.toml
crates/kage-container/src/: lib.rs
crates/kage-core/: Cargo.toml
crates/kage-core/src/: lib.rs
crates/kage-git/: Cargo.toml
crates/kage-git/src/: lib.rs
crates/kage-git/tests/: backend_trees.rs
crates/kage-overlay/: Cargo.toml
crates/kage-overlay/src/: lib.rs
crates/kage-rofs/: Cargo.toml
crates/kage-rofs/src/: fuse.rs  fuser_backend.rs  git_tree.rs  lib.rs  mount.rs  sys.rs
docs/: architecture.md  ci-result-triage.md  ci.md  fuse-backend-evaluation.md  fuse-risk.md  rofs-fuse-backend.md
docs/prompts/: split-large-rofs-module.md  triage-gha-result.md
scripts/: ci-test-summary.sh  run-docker-privileged-rofs-overlay-tests.sh  run-privileged-linux-tests.sh  verify-overlayfs.sh  verify-rofs-overlay.sh  verify-rofs.sh
scripts/ci/: probe-github-hosted-fs.sh  run-containerized-strict-fs-tests.sh  run-default-checks.sh  run-strict-fs-tests.sh  write-proof-summary.sh
scripts/tests/: write-proof-summary-zero-tests.sh
