[package]
name = "kage-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kage"
path = "src/main.rs"

[dependencies]
kage-core = { path = "../kage-core" }
kage-git = { path = "../kage-git" }
kage-overlay = { path = "../kage-overlay" }
kage-container = { path = "../kage-container" }
kage-rofs = { path = "../kage-rofs" }
